[package]
name = "advent-of-code-2020"
license = "MIT"
readme = "README.md"
version = "0.1.0"
authors = ["Andreas Runfalk <andreas@runfalk.se>"]
edition = "2018"
publish = false

# Always optimize builds (we care about speed, not safety)
[profile.dev]
opt-level = 3

[dependencies]
anyhow = "1"
itertools = "0.9"
